force-app/main/default/objects/leaseworks__Project_Contact__c/leaseworks__Project_Contact__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Project Contact</label>
    <nameField>
        <label>Project Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>