force-app/main/default/objects/leaseworks__Project_Contact__c/fields/Customer_Title__c.field-meta.xml
<CustomField>
    <fullName>Customer_Title__c</fullName>
    <formula>Customer_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Title</inlineHelpText>
    <label>Customer Title</label>
    <type>Text</type>
</CustomField>