force-app/main/default/objects/leaseworks__Project_Contact__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <inlineHelpText>Project Contact Email ID</inlineHelpText>
    <label>Email ID</label>
    <type>Email</type>
</CustomField>