force-app/main/default/objects/leaseworks__Project_Contact__c/fields/Email_user__c.field-meta.xml
<CustomField>
    <fullName>Email_user__c</fullName>
    <formula>User__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>