force-app/main/default/objects/leaseworks__Project_Contact__c/fields/leaseworks__Project_Role__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Project_Role__c</fullName>
    <inlineHelpText>Contact role in the current project</inlineHelpText>
    <label>Project Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BSI Rep</fullName>
            </value>
            <value>
                <fullName>CAMO Rep</fullName>
            </value>
            <value>
                <fullName>Carlyle VP/Director</fullName>
            </value>
            <value>
                <fullName>Contract Manager</fullName>
            </value>
            <value>
                <fullName>Engine Rep</fullName>
            </value>
            <value>
                <fullName>Finance Rep</fullName>
            </value>
            <value>
                <fullName>Legacy Rep</fullName>
            </value>
            <value>
                <fullName>Legal Rep</fullName>
            </value>
            <value>
                <fullName>Maintenance Rep</fullName>
            </value>
            <value>
                <fullName>Marketing Rep</fullName>
            </value>
            <value>
                <fullName>Physical Rep</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Records Rep</fullName>
            </value>
            <value>
                <fullName>Structure Rep</fullName>
            </value>
            <value>
                <fullName>Third-Party Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>