force-app/main/default/objects/leaseworks__Project_Contact__c/fields/leaseworks__Technical_Project__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Technical_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Project</label>
    <referenceTo>leaseworks__Technical_Project__c</referenceTo>
    <relationshipLabel>Project Contacts</relationshipLabel>
    <relationshipName>Project_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>