force-app/main/default/objects/leaseworks__Project_Contact__c/recordTypes/Fleet_Maintenance_Power_Plant_Contact.recordType-meta.xml
<RecordType>
    <fullName>Fleet_Maintenance_Power_Plant_Contact</fullName>
    <active>true</active>
    <label>Fleet Maintenance Power Plant Contact</label>
</RecordType>