force-app/main/default/objects/leaseworks__Project_Contact__c/recordTypes/Technical_Project_Contact.recordType-meta.xml
<RecordType>
    <fullName>Technical_Project_Contact</fullName>
    <active>true</active>
    <label>Technical Project Contact</label>
</RecordType>